--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.DnDCombatManager"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".mainactivity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.DnDCombatManager.NoActionBar">
